fix the buttons on firefox

--- a/formstyle.css
+++ b/formstyle.css
@@ -240,3 +240,16 @@ th, td {
     padding-top:10px;
     padding-bottom:10px;
 }
+
+.shanebutton{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 60px;
+    padding-left: 60px;
+    vertical-align:middle;
+}
+
+.spacer{
+  height:30px;
+  width:100%;
+}
